--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true" tools:targetApi="m">
 
-        <activity android:name=".MainActivity">
+        <activity
+                android:name=".MainActivity"
+                android:noHistory = "true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
