--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+
 }
