--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity" android:windowSoftInputMode="adjustResize"/>
+        <activity android:name=".MainActivity"
+                  android:noHistory = "true"
+                  android:windowSoftInputMode="adjustResize"/>
         <activity android:name=".LogIn" android:windowSoftInputMode="adjustResize"/>
         <activity android:name=".SignUp" android:windowSoftInputMode="adjustResize"/>
         <activity android:name=".ChatPage"
