--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,49 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.chatroom" >
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.example.chatroom">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true"
-        tools:targetApi="m" >
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme"
+            android:usesCleartextTraffic="true"
+            tools:targetApi="m">
 
         <activity
-            android:name=".SplashScreen"
-            android:noHistory="true"
-            android:theme="@style/AppTheme.NoNavBar" >
+                android:name=".RoomLobby"
+                android:label="@string/title_activity_room_lobby"
+                android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+                android:name=".SplashScreen"
+                android:noHistory="true"
+                android:theme="@style/AppTheme.NoNavBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:noHistory="true"
-            android:windowSoftInputMode="adjustResize" />
+                android:name=".MainActivity"
+                android:noHistory="true"
+                android:windowSoftInputMode="adjustResize"/>
         <activity
-            android:name=".LogIn"
-            android:noHistory="true"
-            android:windowSoftInputMode="adjustResize" />
+                android:name=".LogIn"
+                android:noHistory="true"
+                android:windowSoftInputMode="adjustResize"/>
         <activity
-            android:name=".SignUp"
-            android:noHistory="true"
-            android:windowSoftInputMode="adjustResize" />
+                android:name=".SignUp"
+                android:noHistory="true"
+                android:windowSoftInputMode="adjustResize"/>
         <activity
-            android:name=".ChatPage"
-            android:theme="@style/AppTheme.NoNavBar"
-            android:windowSoftInputMode="adjustPan" />
+                android:name=".ChatPage"
+                android:theme="@style/AppTheme.NoNavBar"
+                android:windowSoftInputMode="adjustPan"/>
         <activity
                 android:name=".Room"
-                android:windowSoftInputMode="adjustResize" />
+                android:windowSoftInputMode="adjustResize"/>
     </application>
 
 </manifest>
